--- a/project.config.json
+++ b/project.config.json
@@ -4,17 +4,18 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
 		"newFeature": true,
-		"nodeModules": true
+		"nodeModules": true,
+		"autoAudits": false
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.3.2",
+	"libVersion": "2.4.1",
 	"appid": "wx78945a5312716ca3",
-	"projectname": "%E5%9B%BE%E4%B9%A6",
+	"projectname": "book",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
